// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge Badge Active 1`] = `
<span
  className="badge octuple-h6 my-badge-class active"
  style={Object {}}
>
  8
</span>
`;

exports[`Storyshots Badge Badge Default 1`] = `
<span
  className="badge octuple-h6 my-badge-class"
  style={Object {}}
>
  8
</span>
`;

exports[`Storyshots Badge Badge Disruptive 1`] = `
<span
  className="badge octuple-h6 disruptive my-badge-class active"
  style={Object {}}
>
  8
</span>
`;
